--- a/index.html
+++ b/index.html
@@ -48,28 +48,28 @@
                 <div class="project-card reveal" onclick="openModal('Project Daur Ulang', 'Deskripsi detail tentang bagaimana kami mendaur ulang sampah plastik menjadi barang berguna.', 'assets/img/proj1.jpg')">
                     <img src="assets/img/proj1.jpg" alt="Project 1">
                     <div class="card-info">
-                        <h3>Daur Ulang Sampah</h3>
+                        <h3>Kursi Meja</h3>
                         <p>Klik untuk detail</p>
                     </div>
                 </div>
                 <div class="project-card reveal" onclick="openModal('Vertical Garden', 'Pembuatan taman vertikal untuk menghemat lahan dan menambah oksigen.', 'assets/img/proj2.jpg')">
                     <img src="assets/img/proj2.jpg" alt="Project 2">
                     <div class="card-info">
-                        <h3>Vertical Garden</h3>
+                        <h3>Sapu</h3>
                         <p>Klik untuk detail</p>
                     </div>
                 </div>
                 <div class="project-card reveal" onclick="openModal('Hemat Energi', 'Sistem otomatisasi lampu kelas untuk menghemat listrik sekolah.', 'assets/img/proj3.jpg')">
                     <img src="assets/img/proj3.jpg" alt="Project 3">
                     <div class="card-info">
-                        <h3>Kampanye Hemat Energi</h3>
+                        <h3>Kalender</h3>
                         <p>Klik untuk detail</p>
                     </div>
                 </div>
                 <div class="project-card reveal" onclick="openModal('Komposting', 'Pengolahan sampah organik kantin menjadi pupuk kompos.', 'assets/img/proj4.jpg')">
                     <img src="assets/img/proj4.jpg" alt="Project 4">
                     <div class="card-info">
-                        <h3>Pembuatan Kompos</h3>
+                        <h3>Pengki</h3>
                         <p>Klik untuk detail</p>
                     </div>
                 </div>
