--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <section id="posters" class="section-padding">
         <div class="container">
-            <h2 class="section-title">Poster Kampanye</h2>
+            <h2 class="section-title">Infrografis</h2>
             <div class="poster-grid">
                 <img src="assets/img/poster1.jpg" class="poster-item reveal" alt="Poster 1">
                 <img src="assets/img/poster2.jpg" class="poster-item reveal" alt="Poster 2">
@@ -117,7 +117,7 @@
 
     <section id="infographic" class="section-padding bg-light">
         <div class="container">
-            <h2 class="section-title">Infografis Data</h2>
+            <h2 class="section-title">Gambar Poster</h2>
             <div class="infographic-wrapper reveal">
                 <img src="assets/img/infographic.jpg" alt="Infografis Lengkap">
             </div>
