--- a/index.html
+++ b/index.html
@@ -45,28 +45,28 @@
         <div class="container">
             <h2 class="section-title">Hasil Karya Kami</h2>
             <div class="project-grid">
-                <div class="project-card reveal" onclick="openModal('Project Daur Ulang', 'Deskripsi detail tentang bagaimana kami mendaur ulang sampah plastik menjadi barang berguna.', 'assets/img/proj1.jpg')">
+                <div class="project-card reveal" onclick="openModal('Meja Dan Kursi', 'Deskripsi detail tentang bagaimana kami mendaur ulang sampah plastik menjadi barang berguna.', 'assets/img/proj1.jpg')">
                     <img src="assets/img/proj1.jpg" alt="Project 1">
                     <div class="card-info">
                         <h3>Kursi Meja</h3>
                         <p>Klik untuk detail</p>
                     </div>
                 </div>
-                <div class="project-card reveal" onclick="openModal('Vertical Garden', 'Pembuatan taman vertikal untuk menghemat lahan dan menambah oksigen.', 'assets/img/proj2.jpg')">
+                <div class="project-card reveal" onclick="openModal('Sapu dari botol bekas', 'Pembuatan sapu ini bisa menjadi solusi agar sampah botol plastik menjadi sapu untuk menyapu ruangan.', 'assets/img/proj2.jpg')">
                     <img src="assets/img/proj2.jpg" alt="Project 2">
                     <div class="card-info">
                         <h3>Sapu</h3>
                         <p>Klik untuk detail</p>
                     </div>
                 </div>
-                <div class="project-card reveal" onclick="openModal('Hemat Energi', 'Sistem otomatisasi lampu kelas untuk menghemat listrik sekolah.', 'assets/img/proj3.jpg')">
+                <div class="project-card reveal" onclick="openModal('Kalender dari tutup botol plastik', 'Kalender yang berfungsi sebsgai penanda hari bulan dan tanggal dari tutup botol bekas.', 'assets/img/proj3.jpg')">
                     <img src="assets/img/proj3.jpg" alt="Project 3">
                     <div class="card-info">
                         <h3>Kalender</h3>
                         <p>Klik untuk detail</p>
                     </div>
                 </div>
-                <div class="project-card reveal" onclick="openModal('Komposting', 'Pengolahan sampah organik kantin menjadi pupuk kompos.', 'assets/img/proj4.jpg')">
+                <div class="project-card reveal" onclick="openModal('Pengki dari Bekas Jerigen', 'Pengolahan sampah Jerigen menjadi pengki untuk menampung sampah yang telah di sapu.', 'assets/img/proj4.jpg')">
                     <img src="assets/img/proj4.jpg" alt="Project 4">
                     <div class="card-info">
                         <h3>Pengki</h3>
