--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <section id="posters" class="section-padding">
         <div class="container">
-            <h2 class="section-title">Infrografis</h2>
+            <h2 class="section-title">Infrografis dan poster</h2>
             <div class="poster-grid">
                 <img src="assets/img/poster1.jpg" class="poster-item reveal" alt="Poster 1">
                 <img src="assets/img/poster2.jpg" class="poster-item reveal" alt="Poster 2">
