--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="container">
             <h2 class="section-title">Video Dokumentasi</h2>
             <div class="video-wrapper reveal">
-                <iframe width="560" height="315" src="https://m.youtube.com/watch?v=zte-OjypGCk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/watch?si=997M9A25ocp8rAkc&v=zte-OjypGCk&feature=youtu.be" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </section>
