Add new slides to the image carousel
Added two new slides with background images to the carousel.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <div class="slide" style="background-image: url('assets/img/slide3.jpg');"></div>
             <div class="slide" style="background-image: url('assets/img/slide4.jpg');"></div>
             <div class="slide" style="background-image: url('assets/img/slide5.jpg');"></div>
+            <div class="slide" style="background-image: url('assets/img/slide6.jpg');"></div>
+            <div class="slide" style="background-image: url('assets/img/slide7.jpg');"></div>
             <div class="overlay"></div>
         </div>
 
